--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-element-to-jsx-string": "^17.0.0",
+    "react-icons": "^5.5.0",
     "react-typing-effect": "^2.0.5",
     "tailwind-merge": "^3.2.0"
   },
