--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.6",
+    "@react-three/fiber": "^9.1.2",
+    "@types/three": "^0.175.0",
     "clsx": "^2.1.1",
     "motion": "^12.6.5",
     "next": "15.3.0",
@@ -17,15 +20,19 @@
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-typing-effect": "^2.0.5",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "three": "^0.175.0",
+    "three-globe": "^2.42.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "@types/react-lottie": "^1.2.10",
     "@types/react-typing-effect": "^2.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
